--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -14,7 +14,7 @@
             <h4><em>TLDR</em></h4>
             <h2>Get the Gist in Seconds.</h2>
             <h6>
-                TL;DR uses AI to summarize text and audio into bitesize bulletpoints so you can spend less time reading
+                TL;DR uses AI to summarize text, files, and audio into bitesize bulletpoints so you can spend less time reading
                 and more time understanding.
             </h6>
             <button onclick="parent.location='/dashboard';">Get Started</button>
