--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -23,13 +23,12 @@
 }
 
 #blue-back {
-    background-color: #083D77;
+    background-color: #3498db;
     color: white;
 }
 
 #orange-back, #orange-back h1, #orange-back h4 {
-    background: rgb(242,143,59);
-    background: linear-gradient(145deg, rgba(242,143,59,1) 0%, rgba(213,148,61,1) 50%);
+    background-color: #1DC690;
     text-align: center;
 }
 
@@ -92,25 +91,53 @@
 .container h2 {
     padding-bottom: 10px;
     font-size: 45px;
+    color: #EAEAE0;
+}
+
+#save-notes {
+    background-color: #1DC690;
+    color: #EAEAE0;
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 8px;
+    margin: 15px 0 0 30px;
+    box-shadow: 2px 2px 7px 1px black;
+}
+
+#save-notes:hover {
+    background-color: #18a176;
+    cursor: pointer;
+}
+
+.big-p {
+    background-color: #EAEAE0;
+    padding: 10px 10px 10px 10px;
+    border-radius: 10px;
+    box-shadow: 2px 3px 7px 1px black;
 }
 
 .paste-input {
     margin-top: 30px;
-
+    box-shadow: 2px 3px 7px 1px black;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     padding: 50px;
     border-radius: 30px;
+    background-color: #3498dbce;
+    margin-bottom: 30px;
 }
 
 .paste-input textarea {
     width: 500px;
     height: 500px;
-    border: 2px solid black;
+    border: 4px solid black;
     border-radius: 4px;
     padding: 5px;
     resize: none;
+    background-color: #EAEAE0;
 }
 
 .paste-input textarea:focus {
@@ -129,32 +156,35 @@ li {
 }
 
 #tldr-butt {
-    height: 70px;
+    height: 50px;
     width: 150px;
-    background: rgb(59,133,242);
-    background: linear-gradient(169deg, rgba(59,133,242,1) 0%, rgba(61,161,200,1) 53%);
-    border-radius: 20px;
+    background-color: #1DC690;
+    border-radius: 10px;
     font-size: 30px;
     font-weight: 700;
     margin-left: auto;
     margin-top: 15px;
-    border: 2px solid rgb(29, 65, 119)
+    color: #EAEAE0;
+    box-shadow: 2px 3px 7px 1px black;
 }
 
 #tldr-butt:hover {
-    background: rgb(53, 117, 214);
-    background: linear-gradient(169deg, rgb(52, 114, 207) 0%, rrgb(52, 137, 170)53%);
+    background-color:#18a176;
     cursor: pointer;
 }
 
 .output {
     padding: 40px;
-    border-radius: 30px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
     margin-left: 30px;
     margin-top: 30px;
-    background-color: rgba(117, 224, 243, 0.397);
+    background-color: #EAEAE0;
     height: 550px;
     overflow-y: auto;
+    box-shadow: 2px 3px 7px 1px black;
 }
 
 .top-div {
@@ -169,14 +199,16 @@ li {
     border-top: 2px solid black;
     padding-top: 25px;
     width: auto;
-    background-color: rgba(117, 224, 243, 0.397);
+    background-color: #EAEAE0;
     padding: 20px;
     border-radius: 10px;
+    box-shadow: 2px 3px 7px 1px black;
 }
 
 #example-list li {
     font-size: 12px;
     line-height: 20px;
+    list-style:disc;
 }
 
 #example-list {
@@ -184,6 +216,7 @@ li {
     width: auto;
     height: 300px;
     overflow-y: auto;
+    padding-left: 20px;
 }
 
 #example-ta {
@@ -191,7 +224,7 @@ li {
     resize: none;
     padding: 10px;
     min-width: 200px;
-    background-color: white;
+    background-color: #EAEAE0;
     border-radius: 4px;
 }
 
@@ -207,6 +240,7 @@ li {
 .file-types h6 {
     font-size: 20px;
     margin-bottom: 5px;
+    color: #EAEAE0;
 }
 
 .file-types p {
@@ -231,8 +265,12 @@ ul h2 {
     align-items: center;
 }
 
+#save-form .row {
+    margin-bottom: 10px;
+}
+
 .dash-body {
-    background-color: rgb(217,90,90)
+    background-color: #262b2e;
 }
 
 .nav-bar {
@@ -242,6 +280,8 @@ ul h2 {
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     justify-content: center;
+    background-color: #1DC690;
+    box-shadow: 0px 2px 7px 3px black;
 }
 
 .nav-bar a.left-push {
@@ -258,11 +298,11 @@ ul h2 {
     margin: auto 30px;
     width: auto;
     font-weight: 600;
-    color: white;
+    color: black;
 }
 
 .nav-bar a:hover {
-    text-decoration: underline;
+    font-style: italic;
 }
 
 .nav-bar h4 {
@@ -281,6 +321,99 @@ ul h2 {
     margin-top: 15px;
     margin-right: 15px;
 }
+
+#notebook-pop {
+    position:fixed;
+    top:50%;
+    left:50%;
+    width:400px;  /* adjust as per your needs */
+    height:200px;   /* adjust as per your needs */
+    margin-left:-200px;   /* negative half of width above */
+    margin-top:-200px; 
+    background-color: #1DC690;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px 8px black;
+}
+
+#exit {
+    color: #ff2e2e;
+    font-size: 30px;
+    font-weight: bolder;
+    background-color: #1DC690;
+    cursor: pointer;
+    border-radius: 100%;
+    width: 20px;
+    margin-left: auto;
+    margin-right: 10px;
+}
+
+.row h4 {
+    margin-left: 30px;
+    margin-top: 5px;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+#save-form {
+    margin: 20px 30px;
+}
+
+#notebook-select {
+    height: 27px;
+    width: 175px;
+    border-radius: 8px;
+}
+
+#notebook-select:focus {
+    outline: none;
+}
+
+#new-name {
+    height: 27px;
+    width: 170px;
+    padding: 2px;
+    border-radius: 7px;
+    padding-left: 5px;
+}
+
+#new-name:focus {
+    outline: none;
+}
+
+.form-butt {
+    width: 150px;
+    height: 30px;
+    background-color: #3498db;
+    color: #EAEAE0;
+    border-radius: 8px;
+    box-shadow: 2px 2px 7px 1px black;
+}
+
+.form-butt:hover {
+    background-color: #2b81bb;
+    cursor: pointer;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #EAEAE0;
+    border-radius: 50px;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #555;
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
   
 @keyframes spin {
     0% { transform: rotate(0deg); }
