--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -11,15 +11,20 @@
 <body class="dash-body" onload="loadFunction();">
     <nav class="nav-bar">
         <h4>TL;DR</h4>
-        <a href="#" class="left-push">Login</a>
-        <a href="#" class="right-shove">Start for Free</a>
+        {% if user == None %}
+            <a href="/login" class="left-push" onclick="loginButton();">Login</a>
+            <a href="/register" class="right-shove" onclick="registerButton();">Start for Free</a>
+        {% else %} 
+            <a href="/notes" class="left-push">My Notebooks</a>
+            <a href="/logout" class="right-shove">Logout</a>
+        {% endif %}
     </nav>
 
     <main id="dash-main">
         <div class="top-div">
             <div class="container">
                 <h2>How Do I Use tl;dr?</h2>
-                <p>
+                <p class="big-p">
                     TLDR is easy to use. Just paste your text into the text box and hit the "TLDR" button and in seconds
                     your text will be transformed into an easy to read list of bullet points. TLDR also can accept file uploads
                     of both text documents, PDF documents, and even audio files!
@@ -63,7 +68,7 @@ Its size and cultural position make it a model for the world's urban parks. Its 
                 </div>
                 <div class="file-types">
                     <h6>Accepted File Types</h6>
-                    <p>
+                    <p class="big-p">
                         TLDR currently accepts PDFs, txt, doc, docx, pptx, and more! TLDR can also accept images like PNGs and
                         JPGs and extract the text out of them then summarize them for you. It can even accept audio files experimentally
                         (but expect bugs if you do decide to give it a try).
@@ -71,18 +76,41 @@ Its size and cultural position make it a model for the world's urban parks. Its 
                 </div>
             </form>
     
-            <div class="output">
-                <ul id="output-ul">
-                    <h2>Notes</h2>
-                    {% for items in summary %} 
-                        {% for item in items %}
-                            {% if item|length > 10 %} 
-                                <li>{{item.lstrip().capitalize()}}</li>
-                            {% endif %} 
+            <div class="output-col">
+                <div class="output">
+                    <ul id="output-ul">
+                        <h2>Notes</h2>
+                        {% for items in summary %} 
+                            {% for item in items %}
+                                {% if item|length > 10 %} 
+                                    <li>{{item.lstrip().capitalize()}}</li>
+                                {% endif %} 
+                            {% endfor %}
                         {% endfor %}
-                    {% endfor %}
-                </ul>
+                    </ul>
+                </div>
+                <input type="submit" value="Save to Notebook" id="save-notes" onclick="showSave();">
             </div>
+        </div>
+
+        <div id="notebook-pop">
+            <div class="row">
+                <h4>Save to Notebook</h4>
+                <button id="exit" onclick="closeSave();">X</button>
+            </div>
+            <form id="save-form">
+                <div class="row">
+                    <select id="notebook-select">
+
+                    </select>
+                    <input type="submit" value="Delete Notebook" id="delete" name="delete" class="form-butt">
+                </div>
+                <div class="row">
+                    <input type="text" name="new-name" id="new-name" placeholder="Notebook Name">
+                    <input type="submit" name="add-name" id="add-name" value="Add Notebook" class="form-butt">
+                </div>
+                <input type="submit" name="save-notebook" value="Save to Notebook" class="form-butt" id="save-notebook">
+            </form>
         </div>
     </main>
 </body>
