--- a/flask_app/templates/logreg.html
+++ b/flask_app/templates/logreg.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/log.css') }}">
     <script type="text/javascript" src="{{ url_for('static', filename='js/log.js') }}"></script>
     <title>Login/Register</title>
 </head>
 <body onload="whichToShow(); onLoad();">
-    <main class="container">
+    <main class="container" id="my-box">
         <div class="row justify-content-center my-3" id="div-contains">
             <form class="col-4 rounded bg-primary bg-gradient bg-opacity-25 gx-5" id="login-form">
                 <h4 class="row justify-content-center my-3" id="title-login">Login/Register</h4>
