--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -185,6 +185,8 @@ li {
     height: 550px;
     overflow-y: auto;
     box-shadow: 2px 3px 7px 1px black;
+    min-width: 422px;
+    width: auto;
 }
 
 .top-div {
@@ -252,7 +254,7 @@ li {
 
 ul h2 {
     margin-bottom: 5px;
-    width: 100%;
+    width: auto;
     border-bottom: 2px solid black;
     padding-bottom: 5px;
 }
@@ -311,11 +313,11 @@ ul h2 {
 }
 
 .loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
+    border: 8px solid #f3f3f3; /* Light grey */
+    border-top: 8px solid #1DC690; /* Blue */
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     animation: spin 2s linear infinite;
     display: none;
     margin-top: 15px;
@@ -354,7 +356,11 @@ ul h2 {
     font-weight: 600;
 }
 
-#save-form {
+form.row {
+    margin: 20px 0;
+}
+
+#pop-div {
     margin: 20px 30px;
 }
 
