--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -98,19 +98,24 @@ Its size and cultural position make it a model for the world's urban parks. Its 
                 <h4>Save to Notebook</h4>
                 <button id="exit" onclick="closeSave();">X</button>
             </div>
-            <form id="save-form">
-                <div class="row">
-                    <select id="notebook-select">
-
+            
+            <div id="pop-div">
+                <form class="row" methods="POST" id="delete-form">
+                    <select id="notebook-select" name="notebook-select">
+                        {% for notebook in notebooks %} 
+                            <option value="{{notebook.name}}">{{notebook.name}}</option>
+                        {% endfor %}
                     </select>
                     <input type="submit" value="Delete Notebook" id="delete" name="delete" class="form-butt">
-                </div>
-                <div class="row">
+                </form>
+                <form class="row" id="save-form" methods="POST">
                     <input type="text" name="new-name" id="new-name" placeholder="Notebook Name">
                     <input type="submit" name="add-name" id="add-name" value="Add Notebook" class="form-butt">
-                </div>
-                <input type="submit" name="save-notebook" value="Save to Notebook" class="form-butt" id="save-notebook">
-            </form>
+                </form>
+                <form>
+                    <input type="submit" name="save-notebook" value="Save to Notebook" class="form-butt" id="save-notebook">
+                </form>
+            </div>
         </div>
     </main>
 </body>
