Add save bullets to notebook functionality.

--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -112,7 +112,7 @@ Its size and cultural position make it a model for the world's urban parks. Its 
                     <input type="text" name="new-name" id="new-name" placeholder="Notebook Name">
                     <input type="submit" name="add-name" id="add-name" value="Add Notebook" class="form-butt">
                 </form>
-                <form>
+                <form methods="POST" id="save-to-notebook">
                     <input type="submit" name="save-notebook" value="Save to Notebook" class="form-butt" id="save-notebook">
                 </form>
             </div>
