--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -303,6 +303,12 @@ ul h2 {
     color: black;
 }
 
+.nav-bar h4 a {
+    text-decoration: none;
+    font-size: 40px;
+    font-weight: bolder;
+}
+
 .nav-bar a:hover {
     font-style: italic;
 }
@@ -325,6 +331,7 @@ ul h2 {
 }
 
 #notebook-pop {
+    display: none;
     position:fixed;
     top:50%;
     left:50%;
