--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -10,7 +10,8 @@
 #home-main {
     display: flex;
     flex-flow: row nowrap;
-    height: 1100px;
+    height: 1000px;
+    overflow-y: hidden;
 }
 
 #dash-main {
@@ -196,6 +197,7 @@ li {
     border-radius: 10px;
     box-shadow: 2px 1px 7px 1px black;
     font-weight: bolder;
+    color: #EAEAE0;
 }
 
 .notebook-butt:hover {
@@ -289,11 +291,16 @@ ul h2 {
     margin-bottom: 10px;
 }
 
-#notebooks-main {
+.notebooks-main {
     display: flex;
     flex-flow: row;
     justify-content: space-evenly;
     margin-top: 30px;
+}
+
+#nb-col {
+    display: flex;
+    flex-flow: column nowrap;
 }
 
 .dash-body, .notebooks-body {
@@ -309,6 +316,8 @@ ul h2 {
     justify-content: center;
     background-color: #1DC690;
     box-shadow: 0px 2px 7px 3px black;
+    position: relative;
+    z-index: 2;
 }
 
 .notebook-list {
@@ -379,7 +388,7 @@ li {
 #notebook-ul {
     list-style: none;
     margin-top: 10px;
-    border-top: 2px solid black;
+    border-top: 2px solid #EAEAE0;
     max-height: 200px;
 }
 
@@ -390,7 +399,9 @@ li {
 #bullet-ul {
     overflow-y: auto;
     padding-left: 18px;
-    margin-top: 10px;
+    margin-top: 15px;
+    border-top: 2px solid black;
+    padding-top: 10px;
 }
 
 #create-new {
@@ -412,7 +423,12 @@ li {
 }
 
 .delete-nb, .edit-nb {
-    background-color: #EAEAE0;
+    background-color: #3498db;
+    cursor: pointer;
+}
+
+.white {
+    color: #EAEAE0;
 }
 
 .nav-bar a.left-push {
@@ -448,8 +464,8 @@ li {
 }
 
 .loader {
-    border: 8px solid #f3f3f3; /* Light grey */
-    border-top: 8px solid #1DC690; /* Blue */
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #1DC690;
     border-radius: 50%;
     width: 30px;
     height: 30px;
@@ -457,6 +473,14 @@ li {
     display: none;
     margin-top: 15px;
     margin-right: 15px;
+}
+
+#other-loader {
+    height: 50px;
+    width: 50px;
+    margin-left: 15px;
+    border: 8px solid #3498db;
+    border-top: 8px solid #1DC690;
 }
 
 #notebook-pop {
@@ -526,6 +550,50 @@ form.row {
     outline: none;
 }
 
+#arr-right {
+    position: relative;
+    top: 45%;
+    bottom: 50%;
+    left: 10px;
+    font-size: 50px;
+    color: #EAEAE0;
+}
+
+#arr-left {
+    position: relative;
+    top: 45%;
+    bottom: 50%;
+    left: 450px;
+    font-size: 50px;
+    color: #EAEAE0;
+}
+
+#explanation {
+    height: auto;
+}
+
+#side-container {
+    display: none;
+    margin: 30px;
+}
+
+.notebook-side {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 60px;
+    background-color: #3498db;
+    z-index: 1;
+    box-shadow: 2px 0 7px 1px black;
+}
+
+#explanation p {
+    margin-top: 10px;
+    padding-top: 10px;
+    border-top: 2px solid black;
+}
+
 .form-butt {
     width: 150px;
     height: 30px;
@@ -566,6 +634,15 @@ form.row {
     100% { transform: rotate(360deg); }
 }
 
+@media only screen and (max-width: 1400px) {
+    .notebooks-main {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
 @media only screen and (max-width: 1210px) {
     .top-div {
         display: flex;
@@ -598,12 +675,5 @@ form.row {
     }
     #blue-back {
         width: 100%;
-    }
-
-    #notebooks-main {
-        display: flex;
-        flex-flow: column wrap;
-        justify-content: center;
-        align-items: center;
     }
 }
