--- a/flask_app/templates/notebooks.html
+++ b/flask_app/templates/notebooks.html
@@ -53,7 +53,7 @@
                 </div>
                 
                 <ul id="bullet-ul">
-                    <li>Select a notebook to get started!</li>
+                    <li class="bullet-li">Select a notebook to get started!</li>
                 </ul>
             </div>
             <div class="notebook-list">
